tests/typechecker/should_fail/modules.csp
module M
exports
endmodule

X = M
